@@ -2,551 +2,544 @@
 set -euo pipefail
 
 ROOT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")/.." && pwd)"
-ACTION="${ACTION:-start}"
-PRODUCT_LINE="${PRODUCT_LINE:?必须显式设置 PRODUCT_LINE，例如 SPOT、LINEAR_PERPETUAL、LINEAR_DELIVERY 或 OPTION}"
-SERVICES_EXPLICIT="${SERVICES+x}"
-JAVA_OPTS_EXPLICIT="${JAVA_OPTS+x}"
-TEST_PROFILE="${TEST_PROFILE:-auto}"
-source "${ROOT_DIR}/scripts/test-environment-profile.sh"
-test_profile_detect
-PRODUCT_TOPICS_ENABLED="${PRODUCT_TOPICS_ENABLED:-true}"
-PORT_OFFSET="${PORT_OFFSET:-0}"
-if [[ -z "${SERVICES_EXPLICIT}" ]]; then
-  SERVICES="$(test_profile_services "${PRODUCT_LINE}" "${TEST_SCENARIO:-trade}")"
-fi
-BUILD_SERVICES="${BUILD_SERVICES:-false}"
-NATIVE_IMAGE="${NATIVE_IMAGE:-false}"
-NATIVE_BINARY_DIR="${NATIVE_BINARY_DIR:-}"
-NATIVE_RUNTIME_ARGS="${NATIVE_RUNTIME_ARGS:-}"
-WAIT_HEALTH="${WAIT_HEALTH:-true}"
-WAIT_DEPENDENCIES="${WAIT_DEPENDENCIES:-true}"
-HEALTH_TIMEOUT_SECONDS="${HEALTH_TIMEOUT_SECONDS:-180}"
-LOCAL_HOST="${LOCAL_HOST:-127.0.0.1}"
-LOG_DIR="${LOG_DIR:-}"
-JAVA_BIN="${JAVA_BIN:-java}"
-if [[ -z "${JAVA_OPTS_EXPLICIT}" ]]; then
-  JAVA_OPTS="$(test_profile_java_opts)"
-fi
-SPRING_DATASOURCE_URL="${SPRING_DATASOURCE_URL:-jdbc:postgresql://${LOCAL_HOST}:5432/surprising_exchange}"
-SPRING_DATASOURCE_USERNAME="${SPRING_DATASOURCE_USERNAME:-surprising}"
-SPRING_DATASOURCE_PASSWORD="${SPRING_DATASOURCE_PASSWORD:-surprising}"
-KAFKA_BOOTSTRAP_SERVERS="${KAFKA_BOOTSTRAP_SERVERS:-${LOCAL_HOST}:9092}"
+PRODUCT_LINE="${PRODUCT_LINE:?PRODUCT_LINE must be explicit}"
+RUN_ID="${RUN_ID:?RUN_ID must be explicit}"
+ACTION="${ACTION:-up}"
+JAVA_HOME="${JAVA_HOME:-/opt/homebrew/opt/openjdk@25/libexec/openjdk.jdk/Contents/Home}"
+RUNTIME_ROOT="${RUNTIME_ROOT:-${TMPDIR:-/tmp}/surprising-product-line-runtime}"
+RUN_DIR="$RUNTIME_ROOT/$RUN_ID"
+PID_DIR="$RUN_DIR/pids"
+LOG_DIR="$RUN_DIR/logs"
+JFR_DIR="$RUN_DIR/jfr"
+READY_FILE="$RUN_DIR/ready.tsv"
+OWNER_FILE="$RUN_DIR/owner"
+LOCK_DIR="$RUNTIME_ROOT/active.lock"
+LOCK_OWNER="$LOCK_DIR/owner"
+JVM_XMS="${JVM_XMS:-512m}"
+JVM_XMX="${JVM_XMX:-512m}"
+JVM_GC="${JVM_GC:-ZGC}"
+JFR_ENABLED="${JFR_ENABLED:-false}"
+JFR_SETTINGS="${JFR_SETTINGS:-profile}"
+JFR_STACK_DEPTH="${JFR_STACK_DEPTH:-256}"
+POSTGRES_HOST="${POSTGRES_HOST:-127.0.0.1}"
+POSTGRES_PORT="${POSTGRES_PORT:-5432}"
+POSTGRES_DB="${POSTGRES_DB:-postgres}"
+POSTGRES_USER="${POSTGRES_USER:-postgres}"
+POSTGRES_PASSWORD="${POSTGRES_PASSWORD:-postgres}"
+POSTGRES_MODE="${POSTGRES_MODE:-auto}"
+PRICE_HTTP_PROXY_ENABLED="${PRICE_HTTP_PROXY_ENABLED:-false}"
+PRICE_HTTP_PROXY_HOST="${PRICE_HTTP_PROXY_HOST:-127.0.0.1}"
+PRICE_HTTP_PROXY_PORT="${PRICE_HTTP_PROXY_PORT:-7897}"
+PRICE_CONSUMER_CONCURRENCY="${PRICE_CONSUMER_CONCURRENCY:-8}"
+PRICE_CONSUMER_REQUIRED_SYMBOLS="${PRICE_CONSUMER_REQUIRED_SYMBOLS:-BTC-USDT}"
+PRICE_INDEX_REQUIRED_SYMBOLS="${PRICE_INDEX_REQUIRED_SYMBOLS:-}"
+MM_SYMBOL="${MM_SYMBOL:-}"
+MM_BASE_QUANTITY_STEPS="${MM_BASE_QUANTITY_STEPS:-20}"
+MM_ORDER_LEVELS="${MM_ORDER_LEVELS:-20}"
+KAFKA_BOOTSTRAP_SERVERS="${KAFKA_BOOTSTRAP_SERVERS:-127.0.0.1:9092}"
+VALKEY_HOST="${VALKEY_HOST:-127.0.0.1}"
+VALKEY_PORT="${VALKEY_PORT:-6379}"
+AERON_CLUSTER_HOSTNAMES="${AERON_CLUSTER_HOSTNAMES:-127.0.0.1,127.0.0.1,127.0.0.1}"
+AERON_EGRESS_HOSTNAME="${AERON_EGRESS_HOSTNAME:-127.0.0.1}"
+BUILD_CHANGED="${BUILD_CHANGED:-false}"
+JVM_IMPLEMENTATION=""
+JVM_FEATURE_VERSION=""
+JVM_TELEMETRY_MODE=""
 
-product_slug() {
-  echo "$1" | tr '[:upper:]_' '[:lower:]-'
+readonly SERVICES=(instrument price account trading market-data derivatives-lifecycle funding gateway maker)
+readonly HTTP_SERVICES=(instrument price account trading market-data derivatives-lifecycle funding gateway maker)
+readonly HTTP_PORTS=(9080 9082 9086 9084 9081 9087 9089 9094 9096)
+
+fail() {
+  printf 'ERROR=%s\n' "$*" >&2
+  exit 2
 }
 
-validate_product_line() {
+case "$PRODUCT_LINE" in
+  SPOT|LINEAR_PERPETUAL|INVERSE_PERPETUAL|LINEAR_DELIVERY|INVERSE_DELIVERY|OPTION) ;;
+  *) fail "unsupported PRODUCT_LINE=$PRODUCT_LINE" ;;
+esac
+case "$ACTION" in
+  up|fresh|down|status|test|dry-run) ;;
+  *) fail "unsupported ACTION=$ACTION" ;;
+esac
+case "$BUILD_CHANGED" in true|false) ;; *) fail 'BUILD_CHANGED must be true or false' ;; esac
+case "$JVM_GC" in ZGC|G1) ;; *) fail 'JVM_GC must be ZGC or G1' ;; esac
+case "$JFR_ENABLED" in true|false) ;; *) fail 'JFR_ENABLED must be true or false' ;; esac
+case "$JFR_SETTINGS" in profile|default) ;; *) fail 'JFR_SETTINGS must be profile or default' ;; esac
+case "$POSTGRES_MODE" in auto|docker|native) ;; *) fail 'POSTGRES_MODE must be auto, docker or native' ;; esac
+[[ "$RUN_ID" =~ ^[a-zA-Z0-9][a-zA-Z0-9._-]{0,63}$ ]] || fail "invalid RUN_ID=$RUN_ID"
+
+detect_jvm_campaign_support() {
+  local version_output
+  [[ -x "$JAVA_HOME/bin/java" ]] || fail "JDK 25 unavailable JAVA_HOME=$JAVA_HOME"
+  version_output="$("$JAVA_HOME/bin/java" -version 2>&1)" || fail "unable to inspect JVM JAVA_HOME=$JAVA_HOME"
+  if grep -Eqi 'OpenJ9|IBM Semeru' <<<"$version_output"; then
+    fail "unsupported JVM implementation=OPENJ9; requested collector=$JVM_GC telemetry=GC_SAFEPOINT jfr=$JFR_ENABLED require HotSpot 25+"
+  fi
+  if grep -Eqi 'HotSpot|OpenJDK[[:space:]].*Server VM' <<<"$version_output"; then
+    JVM_IMPLEMENTATION=HOTSPOT
+  else
+    fail 'unsupported JVM implementation; require HotSpot 25+ for GC/safepoint/JFR campaign telemetry'
+  fi
+  if [[ "$version_output" =~ version[[:space:]]\"([0-9]+) ]]; then
+    JVM_FEATURE_VERSION="${BASH_REMATCH[1]}"
+  else
+    fail 'unable to determine JVM feature version; require HotSpot 25+'
+  fi
+  (( JVM_FEATURE_VERSION >= 25 )) || \
+    fail "unsupported JVM feature version=$JVM_FEATURE_VERSION; require HotSpot feature version 25 or newer"
+  JVM_TELEMETRY_MODE=UNIFIED_LOGGING
+}
+
+service_enabled() {
   case "$1" in
-    SPOT|LINEAR_PERPETUAL|INVERSE_PERPETUAL|LINEAR_DELIVERY|INVERSE_DELIVERY|OPTION) ;;
-    *)
-      echo "Unsupported PRODUCT_LINE: $1" >&2
-      exit 1
-      ;;
+    funding) [[ "$PRODUCT_LINE" == LINEAR_PERPETUAL || "$PRODUCT_LINE" == INVERSE_PERPETUAL ]] ;;
+    derivatives-lifecycle) [[ "$PRODUCT_LINE" != SPOT ]] ;;
+    *) return 0 ;;
   esac
 }
 
-validate_port_offset() {
-  case "${PORT_OFFSET}" in
-    ''|*[!0-9]*)
-      echo "PORT_OFFSET must be a non-negative integer: ${PORT_OFFSET}" >&2
-      exit 1
-      ;;
-  esac
-}
-
-module_for() {
-  case "$1" in
-    instrument) echo "surprising-instrument/surprising-instrument-provider" ;;
-    candlestick) echo "surprising-candlestick/surprising-candlestick-provider" ;;
-    index-price) echo "surprising-price/surprising-index-price-provider" ;;
-    mark-price) echo "surprising-price/surprising-mark-price-provider" ;;
-    order) echo "surprising-trading/surprising-order-provider" ;;
-    matching) echo "surprising-trading/surprising-matching-provider" ;;
-    trigger) echo "surprising-trading/surprising-trigger-provider" ;;
-    account) echo "surprising-account/surprising-account-provider" ;;
-    risk) echo "surprising-risk/surprising-risk-provider" ;;
-    liquidation) echo "surprising-liquidation/surprising-liquidation-provider" ;;
-    funding) echo "surprising-funding/surprising-funding-provider" ;;
-    insurance) echo "surprising-insurance/surprising-insurance-provider" ;;
-    adl) echo "surprising-adl/surprising-adl-provider" ;;
-    websocket) echo "surprising-websocket/surprising-websocket-provider" ;;
-    gateway) echo "surprising-gateway" ;;
-    market-maker) echo "surprising-market-maker/surprising-market-maker-provider" ;;
-    *)
-      echo "Unknown service: $1" >&2
-      exit 1
-      ;;
-  esac
-}
-
-artifact_for() {
-  basename "$(module_for "$1")"
-}
-
-base_port_for() {
-  case "$1" in
-    instrument) echo 9080 ;;
-    candlestick) echo 9081 ;;
-    index-price) echo 9082 ;;
-    mark-price) echo 9083 ;;
-    order) echo 9084 ;;
-    matching) echo 9085 ;;
-    account) echo 9086 ;;
-    risk) echo 9087 ;;
-    liquidation) echo 9088 ;;
-    funding) echo 9089 ;;
-    insurance) echo 9090 ;;
-    adl) echo 9091 ;;
-    websocket) echo "${WEBSOCKET_PORT:-9097}" ;;
-    gateway) echo 9094 ;;
-    trigger) echo 9095 ;;
-    market-maker) echo 9096 ;;
-    *)
-      echo "Unknown service: $1" >&2
-      exit 1
-      ;;
-  esac
-}
-
-supports_funding() {
-  [[ "${PRODUCT_LINE}" == "LINEAR_PERPETUAL" || "${PRODUCT_LINE}" == "INVERSE_PERPETUAL" ]]
-}
-
-supports_margin_services() {
-  [[ "${PRODUCT_LINE}" != "SPOT" ]]
-}
-
-service_requested() {
-  local needle="$1"
-  local service
-  for service in ${SERVICES}; do
-    if [[ "${service}" == "${needle}" ]]; then
-      return 0
-    fi
+service_port() {
+  local index
+  for index in "${!HTTP_SERVICES[@]}"; do
+    [[ "${HTTP_SERVICES[$index]}" == "$1" ]] && { printf '%s' "${HTTP_PORTS[$index]}"; return; }
   done
+}
+
+jar_path() {
+  case "$1" in
+    core) printf '%s/surprising-aeron-core/surprising-aeron-service/target/surprising-aeron-service.jar' "$ROOT_DIR" ;;
+    tools) printf '%s/surprising-aeron-core/surprising-aeron-tools/target/surprising-aeron-tools.jar' "$ROOT_DIR" ;;
+    instrument) printf '%s/surprising-instrument/surprising-instrument-provider/target/surprising-instrument-provider-1.0.0-SNAPSHOT-exec.jar' "$ROOT_DIR" ;;
+    market-data) printf '%s/surprising-market-data/surprising-market-data-provider/target/surprising-market-data-provider-1.0.0-SNAPSHOT-exec.jar' "$ROOT_DIR" ;;
+    price) printf '%s/surprising-price/surprising-price-provider/target/surprising-price-provider-1.0.0-SNAPSHOT-exec.jar' "$ROOT_DIR" ;;
+    trading) printf '%s/surprising-trading/surprising-trading-provider/target/surprising-trading-provider-1.0.0-SNAPSHOT-exec.jar' "$ROOT_DIR" ;;
+    account) printf '%s/surprising-account/surprising-account-provider/target/surprising-account-provider-1.0.0-SNAPSHOT-exec.jar' "$ROOT_DIR" ;;
+    derivatives-lifecycle) printf '%s/surprising-derivatives-lifecycle/surprising-derivatives-lifecycle-provider/target/surprising-derivatives-lifecycle-provider-1.0.0-SNAPSHOT-exec.jar' "$ROOT_DIR" ;;
+    funding) printf '%s/surprising-funding/surprising-funding-provider/target/surprising-funding-provider-1.0.0-SNAPSHOT-exec.jar' "$ROOT_DIR" ;;
+    gateway) printf '%s/surprising-gateway/target/surprising-gateway-1.0.0-SNAPSHOT-exec.jar' "$ROOT_DIR" ;;
+    maker) printf '%s/surprising-maker/target/surprising-maker-1.0.0-SNAPSHOT-exec.jar' "$ROOT_DIR" ;;
+    *) fail "unknown service=$1" ;;
+  esac
+}
+
+preflight_port() {
+  nc -z "$1" "$2" >/dev/null 2>&1 || fail "dependency unavailable host=$1 port=$2"
+}
+
+preflight() {
+  [[ -x "$JAVA_HOME/bin/java" ]] || fail "JDK 25 unavailable JAVA_HOME=$JAVA_HOME"
+  command -v curl >/dev/null || fail 'curl unavailable'
+  command -v nc >/dev/null || fail 'nc unavailable'
+  if [[ "$POSTGRES_MODE" == docker ]] || {
+    [[ "$POSTGRES_MODE" == auto ]] && [[ -z "$(postgres_container)" ]] && ! command -v psql >/dev/null
+  }; then
+    command -v docker >/dev/null || fail 'docker unavailable'
+    docker info >/dev/null 2>&1 || fail 'docker daemon unavailable'
+  fi
+  preflight_port "$POSTGRES_HOST" "$POSTGRES_PORT"
+  preflight_port "${KAFKA_BOOTSTRAP_SERVERS%:*}" "${KAFKA_BOOTSTRAP_SERVERS##*:}"
+  preflight_port "$VALKEY_HOST" "$VALKEY_PORT"
+}
+
+build_artifacts() {
+  if [[ "$BUILD_CHANGED" == true ]]; then
+    BUILD_BASE="${BUILD_BASE:-HEAD}" "$ROOT_DIR/scripts/build-incremental.sh" --changed
+  fi
+  local service missing=()
+  for service in core tools "${SERVICES[@]}"; do
+    service_enabled "$service" || continue
+    [[ -f "$(jar_path "$service")" ]] || missing+=("$service")
+  done
+  (( ${#missing[@]} == 0 )) || fail "artifacts missing services=${missing[*]}; build affected modules first"
+}
+
+postgres_container() {
+  command -v docker >/dev/null 2>&1 || return 0
+  docker ps --filter publish="$POSTGRES_PORT" --format '{{.ID}}' | head -1
+}
+
+postgres_transport() {
+  case "$POSTGRES_MODE" in
+    docker) printf 'docker\n' ;;
+    native) printf 'native\n' ;;
+    auto)
+      if [[ -n "$(postgres_container)" ]]; then
+        printf 'docker\n'
+      else
+        printf 'native\n'
+      fi
+      ;;
+  esac
+}
+
+postgres_exec() {
+  if [[ "$(postgres_transport)" == docker ]]; then
+    local container
+    container="$(postgres_container)"
+    [[ -n "$container" ]] || fail "PostgreSQL container exposing port $POSTGRES_PORT not found"
+    docker exec -e PGPASSWORD="$POSTGRES_PASSWORD" -i "$container" \
+      psql -v ON_ERROR_STOP=1 -U "$POSTGRES_USER" -d "$POSTGRES_DB" "$@"
+    return
+  fi
+  command -v psql >/dev/null || fail 'native PostgreSQL selected but psql unavailable'
+  PGPASSWORD="$POSTGRES_PASSWORD" psql -v ON_ERROR_STOP=1 \
+    -h "$POSTGRES_HOST" -p "$POSTGRES_PORT" -U "$POSTGRES_USER" -d "$POSTGRES_DB" "$@"
+}
+
+initialize_database() {
+  local initialized
+  initialized="$(postgres_exec -Atqc "SELECT to_regclass('public.instruments') IS NOT NULL")"
+  if [[ "$initialized" != t ]]; then
+    postgres_exec < "$ROOT_DIR/init.sql" >/dev/null
+  fi
+  printf 'DATABASE=READY database=%s\n' "$POSTGRES_DB"
+}
+
+assert_lock_available() {
+  if [[ -f "$LOCK_OWNER" && "$(<"$LOCK_OWNER")" != "$RUN_ID" ]]; then
+    fail "another product line is active runId=$(<"$LOCK_OWNER")"
+  fi
+}
+
+claim_runtime() {
+  assert_lock_available
+  mkdir -p "$PID_DIR" "$LOG_DIR" "$JFR_DIR" "$LOCK_DIR"
+  printf '%s\n' "$RUN_ID" > "$LOCK_OWNER"
+  printf '%s\n' "$RUN_ID" > "$OWNER_FILE"
+  : > "$READY_FILE"
+}
+
+java_args_for() {
+  local service="$1"
+  [[ "$JVM_IMPLEMENTATION" == HOTSPOT && "$JVM_TELEMETRY_MODE" == UNIFIED_LOGGING ]] || \
+    fail 'JVM compatibility was not initialized for startup'
+  JVM_ARGS=(
+    "-Xms$JVM_XMS"
+    "-Xmx$JVM_XMX"
+    "-Dsurprising.launcher.identity=$RUN_ID/$service"
+    "-XX:+AlwaysPreTouch"
+    "--enable-native-access=ALL-UNNAMED"
+    "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"
+    "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED"
+    "-Xlog:gc*,safepoint:file=$LOG_DIR/$service-gc.log:time,uptime,level,tags:filecount=5,filesize=100M"
+  )
+  if [[ "$JVM_GC" == ZGC ]]; then
+    JVM_ARGS+=("-XX:+UseZGC")
+  else
+    JVM_ARGS+=("-XX:+UseG1GC")
+  fi
+  if [[ "$JFR_ENABLED" == true ]]; then
+    JVM_ARGS+=(
+      "-XX:FlightRecorderOptions=stackdepth=$JFR_STACK_DEPTH"
+      "-XX:StartFlightRecording=filename=$JFR_DIR/$service.jfr,settings=$JFR_SETTINGS,dumponexit=true"
+    )
+  fi
+}
+
+mark_ready() {
+  printf '%s\t%s\n' "$(( $(wc -l < "$READY_FILE") + 1 ))" "$1" >> "$READY_FILE"
+  printf 'READY=%s\n' "$1"
+}
+
+port_owned_by_process_tree() {
+  local port="$1" owner_pid="$2" listener current parent depth
+  while IFS= read -r listener; do
+    current="$listener"; depth=0
+    while [[ "$current" =~ ^[0-9]+$ ]] && (( depth < 12 )); do
+      [[ "$current" == "$owner_pid" ]] && return 0
+      parent="$(ps -p "$current" -o ppid= 2>/dev/null | tr -d ' ' || true)"
+      [[ -n "$parent" && "$parent" != "$current" ]] || break
+      current="$parent"; depth=$((depth + 1))
+    done
+  done < <(lsof -nP -t -iTCP:"$port" -sTCP:LISTEN 2>/dev/null | sort -u)
   return 1
 }
 
-find_jar() {
-  local module="$1"
-  local artifact
-  artifact="$(basename "${module}")"
-  local candidates=("${ROOT_DIR}/${module}/target/${artifact}-"*.jar)
-  local jar
-  for jar in "${candidates[@]}"; do
-    [[ -f "${jar}" ]] || continue
-    [[ "${jar}" == *"-sources.jar" || "${jar}" == *"-javadoc.jar" || "${jar}" == *".original" ]] && continue
-    echo "${jar}"
-    return
-  done
-  echo "Missing jar for ${module}; run BUILD_SERVICES=true $0 or mvn -q -pl :${artifact} -am -DskipTests package" >&2
-  exit 1
-}
-
-find_native_binary() {
-  local module="$1"
-  local artifact
-  artifact="$(basename "${module}")"
-  local binary_dir="${NATIVE_BINARY_DIR:-${ROOT_DIR}/${module}/target}"
-  local candidates=("${binary_dir}/${artifact}" "${binary_dir}/${artifact}-"*)
-  local binary
-  for binary in "${candidates[@]}"; do
-    [[ -f "${binary}" && -x "${binary}" ]] || continue
-    echo "${binary}"
-    return
-  done
-  echo "Missing Native Image binary for ${module}; run BUILD_SERVICES=true NATIVE_IMAGE=true PRODUCT_LINE=${PRODUCT_LINE} $0" >&2
-  exit 1
-}
-
-build_service() {
-  local service="$1"
-  local artifact module
-  artifact="$(artifact_for "${service}")"
-  module="$(module_for "${service}")"
-  if [[ "${NATIVE_IMAGE}" == "true" ]]; then
-    mvn -q -pl ":${artifact}" -am -Pnative -Dmaven.test.skip=true install
-    "${ROOT_DIR}/scripts/check-native-aot-metadata.sh" "${module}" "${artifact}"
-    mvn -q -pl ":${artifact}" -Pnative -Dmaven.test.skip=true native:compile
+launchctl_path() {
+  local resolved
+  if [[ -x /bin/launchctl ]]; then
+    printf '/bin/launchctl\n'
+  elif resolved="$(command -v launchctl 2>/dev/null)" && [[ -n "$resolved" ]]; then
+    printf '%s\n' "$resolved"
   else
-    mvn -q -pl ":${artifact}" -am -DskipTests package
+    return 1
   fi
 }
 
-common_env() {
-  local service="$1"
-  local port="$2"
-  local slug="$3"
-  printf '%s\n' \
-    "SERVER_PORT=${port}" \
-    "SPRING_DATASOURCE_URL=${SPRING_DATASOURCE_URL}" \
-    "SPRING_DATASOURCE_USERNAME=${SPRING_DATASOURCE_USERNAME}" \
-    "SPRING_DATASOURCE_PASSWORD=${SPRING_DATASOURCE_PASSWORD}" \
-    "MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE=health,info,metrics,prometheus" \
-    "PRODUCT_LINE=${PRODUCT_LINE}" \
-    "PRODUCT_TOPICS_ENABLED=${PRODUCT_TOPICS_ENABLED}" \
-    "SURPRISING_PRICE_CONSUMER_PRODUCT_LINE=${PRODUCT_LINE}" \
-    "SURPRISING_PRICE_CONSUMER_PRODUCT_TOPICS_ENABLED=${PRODUCT_TOPICS_ENABLED}" \
-    "INSTANCE_PRODUCT_LINE=${PRODUCT_LINE}" \
-    "INSTANCE_PRODUCT_SLUG=${slug}" \
-    "INSTANCE_SERVICE=${service}"
-  if [[ -n "${SERVER_TOMCAT_THREADS_MAX:-}" ]]; then
-    printf '%s\n' "SERVER_TOMCAT_THREADS_MAX=${SERVER_TOMCAT_THREADS_MAX}"
+start_owned_process() {
+  local name="$1" port="$2" pid label launchctl_bin setsid_bin
+  shift 2
+  if launchctl_bin="$(launchctl_path)"; then
+    label="com.surprising.product-line.${RUN_ID//[^a-zA-Z0-9.-]/-}.$name"
+    "$launchctl_bin" remove "$label" >/dev/null 2>&1 || true
+    "$launchctl_bin" submit -l "$label" -o "$LOG_DIR/$name.log" -e "$LOG_DIR/$name.log" -- \
+      /bin/bash -c 'cd "$0"; exec "$@"' "$RUN_DIR" "$@"
+    printf '%s\n' "$label" > "$PID_DIR/$name.label"
+    local pid_deadline=$((SECONDS + 10))
+    until pid="$("$launchctl_bin" print "gui/$(id -u)/$label" 2>/dev/null | awk '/pid =/{print $3; exit}')" && [[ "$pid" =~ ^[0-9]+$ ]]; do
+      (( SECONDS < pid_deadline )) || fail "launch timeout name=$name log=$LOG_DIR/$name.log"
+      sleep 1
+    done
+  else
+    setsid_bin="$(command -v setsid 2>/dev/null)" || \
+      fail "durable process supervisor unavailable name=$name; require launchctl or setsid"
+    nohup "$setsid_bin" bash -c 'cd "$0"; exec "$@"' "$RUN_DIR" "$@" \
+      >"$LOG_DIR/$name.log" 2>&1 < /dev/null &
+    pid=$!
   fi
-  if [[ -n "${SERVER_TOMCAT_THREADS_MIN_SPARE:-}" ]]; then
-    printf '%s\n' "SERVER_TOMCAT_THREADS_MIN_SPARE=${SERVER_TOMCAT_THREADS_MIN_SPARE}"
+  printf '%s\n' "$pid" > "$PID_DIR/$name.pid"
+  if [[ -n "$port" ]]; then
+    local deadline=$((SECONDS + 120))
+    until port_owned_by_process_tree "$port" "$pid" && curl --fail --silent --max-time 2 \
+      "http://127.0.0.1:$port/actuator/health" >/dev/null; do
+      kill -0 "$pid" 2>/dev/null || fail "service exited name=$name log=$LOG_DIR/$name.log"
+      (( SECONDS < deadline )) || fail "health timeout name=$name port=$port log=$LOG_DIR/$name.log"
+      sleep 1
+    done
+  else
+    sleep 2
+    kill -0 "$pid" 2>/dev/null || fail "service exited name=$name log=$LOG_DIR/$name.log"
   fi
-  if [[ -n "${SERVER_TOMCAT_ACCEPT_COUNT:-}" ]]; then
-    printf '%s\n' "SERVER_TOMCAT_ACCEPT_COUNT=${SERVER_TOMCAT_ACCEPT_COUNT}"
-  fi
-  if [[ -n "${SERVER_TOMCAT_MAX_CONNECTIONS:-}" ]]; then
-    printf '%s\n' "SERVER_TOMCAT_MAX_CONNECTIONS=${SERVER_TOMCAT_MAX_CONNECTIONS}"
-  fi
+  mark_ready "$name"
 }
 
-service_env() {
-  local service="$1"
-  local slug="$2"
-  local instrument_port=$((9080 + PORT_OFFSET))
-  local candlestick_port=$((9081 + PORT_OFFSET))
-  local index_price_port=$((9082 + PORT_OFFSET))
-  local mark_price_port=$((9083 + PORT_OFFSET))
-  local order_port=$((9084 + PORT_OFFSET))
-  local matching_port=$((9085 + PORT_OFFSET))
-  local account_port=$((9086 + PORT_OFFSET))
-  local risk_port=$((9087 + PORT_OFFSET))
-  local liquidation_port=$((9088 + PORT_OFFSET))
-  local funding_port=$((9089 + PORT_OFFSET))
-  local insurance_port=$((9090 + PORT_OFFSET))
-  local adl_port=$((9091 + PORT_OFFSET))
-  local trigger_port=$((9095 + PORT_OFFSET))
-  printf '%s\n' \
-    "SURPRISING_CLIENTS_INSTRUMENT_BASE_URL=http://${LOCAL_HOST}:${instrument_port}" \
-    "SURPRISING_CLIENTS_CANDLESTICK_BASE_URL=http://${LOCAL_HOST}:${candlestick_port}" \
-    "SURPRISING_CLIENTS_INDEX_PRICE_BASE_URL=http://${LOCAL_HOST}:${index_price_port}" \
-    "SURPRISING_CLIENTS_MARK_PRICE_BASE_URL=http://${LOCAL_HOST}:${mark_price_port}" \
-    "SURPRISING_CLIENTS_ORDER_BASE_URL=http://${LOCAL_HOST}:${order_port}" \
-    "SURPRISING_CLIENTS_MATCHING_BASE_URL=http://${LOCAL_HOST}:${matching_port}" \
-    "SURPRISING_CLIENTS_ACCOUNT_BASE_URL=http://${LOCAL_HOST}:${account_port}" \
-    "SURPRISING_CLIENTS_RISK_BASE_URL=http://${LOCAL_HOST}:${risk_port}" \
-    "SURPRISING_CLIENTS_LIQUIDATION_BASE_URL=http://${LOCAL_HOST}:${liquidation_port}" \
-    "SURPRISING_CLIENTS_FUNDING_BASE_URL=http://${LOCAL_HOST}:${funding_port}" \
-    "SURPRISING_CLIENTS_INSURANCE_BASE_URL=http://${LOCAL_HOST}:${insurance_port}" \
-    "SURPRISING_CLIENTS_ADL_BASE_URL=http://${LOCAL_HOST}:${adl_port}" \
-    "SURPRISING_CLIENTS_TRIGGER_BASE_URL=http://${LOCAL_HOST}:${trigger_port}"
-  case "${service}" in
-    instrument)
-      printf '%s\n' \
-        "SURPRISING_INSTRUMENT_KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}"
-      ;;
-    candlestick)
-      printf '%s\n' \
-        "SURPRISING_CANDLESTICK_KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}" \
-        "SURPRISING_CANDLESTICK_KAFKA_PRODUCT_LINE=${PRODUCT_LINE}" \
-        "SURPRISING_CANDLESTICK_KAFKA_PRODUCT_TOPICS_ENABLED=${PRODUCT_TOPICS_ENABLED}" \
-        "SURPRISING_CANDLESTICK_KAFKA_APPLICATION_ID=surprising-candlestick-${slug}-${PORT_OFFSET}-v1" \
-        "SURPRISING_CANDLESTICK_KAFKA_APPLICATION_ID_OVERRIDE=surprising-candlestick-${slug}-${PORT_OFFSET}-v2" \
-        "SURPRISING_CANDLESTICK_STREAM_STATE_DIR=${ROOT_DIR}/data/kafka-streams/${slug}/candlestick" \
-        "SURPRISING_CANDLESTICK_KAFKA_APPLICATION_SERVER=${LOCAL_HOST}:0"
-      ;;
-    index-price)
-      printf '%s\n' \
-        "SURPRISING_PRICE_INDEX_KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}" \
-        "SURPRISING_PRICE_INDEX_KAFKA_PRODUCT_LINE=${PRODUCT_LINE}" \
-        "SURPRISING_PRICE_INDEX_KAFKA_PRODUCT_TOPICS_ENABLED=${PRODUCT_TOPICS_ENABLED}" \
-        "SURPRISING_PRICE_INDEX_COORDINATION_NODE_ID=${HOSTNAME:-local}-${slug}-index"
-      ;;
-    mark-price)
-      printf '%s\n' \
-        "SURPRISING_PRICE_MARK_KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}" \
-        "SURPRISING_PRICE_MARK_KAFKA_PRODUCT_LINE=${PRODUCT_LINE}" \
-        "SURPRISING_PRICE_MARK_KAFKA_PRODUCT_TOPICS_ENABLED=${PRODUCT_TOPICS_ENABLED}" \
-        "SURPRISING_PRICE_MARK_KAFKA_GROUP_ID=surprising-mark-price-${slug}-v1" \
-        "SURPRISING_PRICE_MARK_COORDINATION_NODE_ID=${HOSTNAME:-local}-${slug}-mark"
-      ;;
-    order)
-      local order_node_id="${ORDER_WAL_NODE_ID:-$((PORT_OFFSET / 100 + 1))}"
-      if [[ "${order_node_id}" -lt 0 || "${order_node_id}" -gt 1023 ]]; then
-        echo "ORDER_WAL_NODE_ID must be in 0..1023: ${order_node_id}" >&2
-        exit 1
-      fi
-      printf '%s\n' \
-        "SURPRISING_TRADING_ORDER_KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}" \
-        "SURPRISING_TRADING_ORDER_KAFKA_PRODUCT_LINE=${PRODUCT_LINE}" \
-        "SURPRISING_TRADING_ORDER_KAFKA_PRODUCT_TOPICS_ENABLED=${PRODUCT_TOPICS_ENABLED}" \
-        "ORDER_WAL_NODE_ID=${order_node_id}"
-      if [[ -n "${ORDER_WAL_DIR:-}" ]]; then
-        printf '%s\n' "ORDER_WAL_DIR=${ORDER_WAL_DIR}"
-      fi
-      ;;
-    matching)
-      printf '%s\n' \
-        "SURPRISING_TRADING_MATCHING_KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}" \
-        "SURPRISING_TRADING_MATCHING_KAFKA_PRODUCT_LINE=${PRODUCT_LINE}" \
-        "SURPRISING_TRADING_MATCHING_KAFKA_PRODUCT_TOPICS_ENABLED=${PRODUCT_TOPICS_ENABLED}" \
-        "SURPRISING_TRADING_MATCHING_KAFKA_GROUP_ID=surprising-matching-${slug}-v1" \
-        "SURPRISING_TRADING_MATCHING_KAFKA_CLIENT_ID=surprising-matching-${slug}-${HOSTNAME:-local}-$$" \
-        "SURPRISING_TRADING_MATCHING_ENGINE_EXCHANGE_ID=surprising-${slug}" \
-        "SURPRISING_TRADING_MATCHING_RECOVERY_OPEN_ORDER_BOOK_RESTORE_ENABLED=${SURPRISING_TRADING_MATCHING_RECOVERY_OPEN_ORDER_BOOK_RESTORE_ENABLED:-true}"
-      if [[ -n "${MATCHING_WAL_DIR:-}" ]]; then
-        printf '%s\n' "MATCHING_WAL_DIR=${MATCHING_WAL_DIR}"
-      fi
-      ;;
-    trigger)
-      printf '%s\n' \
-        "SURPRISING_TRADING_TRIGGER_KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}" \
-        "SURPRISING_TRADING_TRIGGER_KAFKA_PRODUCT_LINE=${PRODUCT_LINE}" \
-        "SURPRISING_TRADING_TRIGGER_KAFKA_PRODUCT_TOPICS_ENABLED=${PRODUCT_TOPICS_ENABLED}" \
-        "SURPRISING_TRADING_TRIGGER_KAFKA_GROUP_ID=surprising-trigger-${slug}-v1"
-      ;;
-    account)
-      printf '%s\n' \
-        "SURPRISING_ACCOUNT_KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}" \
-        "SURPRISING_ACCOUNT_KAFKA_PRODUCT_LINE=${PRODUCT_LINE}" \
-        "SURPRISING_ACCOUNT_KAFKA_PRODUCT_TOPICS_ENABLED=${PRODUCT_TOPICS_ENABLED}" \
-        "SURPRISING_ACCOUNT_KAFKA_GROUP_ID=surprising-account-${slug}-v1" \
-        "SURPRISING_ACCOUNT_KAFKA_CLIENT_ID=surprising-account-${slug}-${HOSTNAME:-local}-$$"
-      ;;
-    risk)
-      printf '%s\n' \
-        "SURPRISING_RISK_KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}" \
-        "SURPRISING_RISK_KAFKA_PRODUCT_LINE=${PRODUCT_LINE}" \
-        "SURPRISING_RISK_KAFKA_PRODUCT_TOPICS_ENABLED=${PRODUCT_TOPICS_ENABLED}" \
-        "SURPRISING_RISK_KAFKA_GROUP_ID=surprising-risk-${slug}-v1" \
-        "SURPRISING_RISK_COORDINATION_NODE_ID=${HOSTNAME:-local}-${slug}-risk"
-      ;;
-    liquidation)
-      printf '%s\n' \
-        "SURPRISING_LIQUIDATION_KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}" \
-        "SURPRISING_LIQUIDATION_KAFKA_PRODUCT_LINE=${PRODUCT_LINE}" \
-        "SURPRISING_LIQUIDATION_KAFKA_PRODUCT_TOPICS_ENABLED=${PRODUCT_TOPICS_ENABLED}" \
-        "SURPRISING_LIQUIDATION_KAFKA_GROUP_ID=surprising-liquidation-${slug}-v1"
-      ;;
-    funding)
-      printf '%s\n' \
-        "SURPRISING_FUNDING_KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}" \
-        "SURPRISING_FUNDING_KAFKA_PRODUCT_LINE=${PRODUCT_LINE}" \
-        "SURPRISING_FUNDING_KAFKA_PRODUCT_TOPICS_ENABLED=${PRODUCT_TOPICS_ENABLED}" \
-        "SURPRISING_FUNDING_COORDINATION_NODE_ID=${HOSTNAME:-local}-${slug}-funding"
-      ;;
-    insurance)
-      printf '%s\n' \
-        "SURPRISING_INSURANCE_KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}" \
-        "SURPRISING_INSURANCE_KAFKA_PRODUCT_LINE=${PRODUCT_LINE}" \
-        "SURPRISING_INSURANCE_KAFKA_PRODUCT_TOPICS_ENABLED=${PRODUCT_TOPICS_ENABLED}" \
-        "SURPRISING_INSURANCE_KAFKA_GROUP_ID=surprising-insurance-${slug}-v1"
-      ;;
-    adl)
-      printf '%s\n' \
-        "SURPRISING_ADL_KAFKA_PRODUCT_LINE=${PRODUCT_LINE}" \
-        "SURPRISING_ADL_KAFKA_PRODUCT_TOPICS_ENABLED=${PRODUCT_TOPICS_ENABLED}"
-      ;;
-    websocket)
-      printf '%s\n' \
-        "SURPRISING_WEBSOCKET_KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}" \
-        "SURPRISING_WEBSOCKET_KAFKA_PRODUCT_LINE=${PRODUCT_LINE}" \
-        "SURPRISING_WEBSOCKET_KAFKA_PRODUCT_TOPICS_ENABLED=${PRODUCT_TOPICS_ENABLED}" \
-        "SURPRISING_WEBSOCKET_KAFKA_GROUP_ID=surprising-websocket-${slug}-${HOSTNAME:-local}-$$"
-      ;;
-    gateway)
-      local route_values=()
-      local route_name route_port route_env_name
-      for route_name in instrument candlestick price-index price-mark trading trading-leverage trading-market trading-trades trading-trigger account risk liquidation funding insurance adl market-maker; do
-        case "${route_name}" in
-          instrument) route_port="${instrument_port}" ;;
-          candlestick) route_port="${candlestick_port}" ;;
-          price-index) route_port="${index_price_port}" ;;
-          price-mark) route_port="${mark_price_port}" ;;
-          trading|trading-leverage) route_port="${order_port}" ;;
-          trading-market|trading-trades) route_port="${matching_port}" ;;
-          trading-trigger) route_port="${trigger_port}" ;;
-          account) route_port="${account_port}" ;;
-          risk) route_port="${risk_port}" ;;
-          liquidation) route_port="${liquidation_port}" ;;
-          funding) route_port="${funding_port}" ;;
-          insurance) route_port="${insurance_port}" ;;
-          adl) route_port="${adl_port}" ;;
-          market-maker) route_port=$((9096 + PORT_OFFSET)) ;;
-        esac
-        route_env_name="${route_name//-/_}"
-        route_env_name="$(printf '%s' "${route_env_name}" | tr '[:lower:]' '[:upper:]')"
-        route_values+=("GATEWAY_ROUTE_${route_env_name}_${PRODUCT_LINE}_BASE_URL=http://${LOCAL_HOST}:${route_port}")
-      done
-      printf '%s\n' "${route_values[@]}"
-      ;;
-    market-maker)
-      local mark_price_port=9083
-      if service_requested index-price && ! service_requested mark-price; then
-        mark_price_port=9082
-      fi
-      mark_price_port=$((mark_price_port + PORT_OFFSET))
-      printf '%s\n' \
-        "SURPRISING_MARKET_MAKER_ENGINE_NODE_ID=${HOSTNAME:-local}-${slug}-market-maker" \
-        "SURPRISING_CLIENTS_MARK_PRICE_BASE_URL=http://${LOCAL_HOST}:${mark_price_port}"
-      ;;
-  esac
+COMMON_ENV=(
+    env \
+    PRODUCT_LINE="$PRODUCT_LINE" WALLET_ENABLED=false \
+    AERON_CLUSTER_HOSTNAMES="$AERON_CLUSTER_HOSTNAMES" AERON_HOSTNAMES="$AERON_CLUSTER_HOSTNAMES" \
+    AERON_EGRESS_HOSTNAME="$AERON_EGRESS_HOSTNAME" AERON_CLIENT_EGRESS_HOSTNAME="$AERON_EGRESS_HOSTNAME" \
+    KAFKA_BOOTSTRAP_SERVERS="$KAFKA_BOOTSTRAP_SERVERS" SPRING_KAFKA_BOOTSTRAP_SERVERS="$KAFKA_BOOTSTRAP_SERVERS" \
+    SURPRISING_KAFKA_BOOTSTRAP_SERVERS="$KAFKA_BOOTSTRAP_SERVERS" \
+    SURPRISING_INSTRUMENT_KAFKA_BOOTSTRAP_SERVERS="$KAFKA_BOOTSTRAP_SERVERS" \
+    SURPRISING_ACCOUNT_KAFKA_BOOTSTRAP_SERVERS="$KAFKA_BOOTSTRAP_SERVERS" \
+    SURPRISING_PRICE_CONSUMER_BOOTSTRAP_SERVERS="$KAFKA_BOOTSTRAP_SERVERS" \
+    PRICE_INDEX_REQUIRED_SYMBOLS="$PRICE_INDEX_REQUIRED_SYMBOLS" \
+    SURPRISING_PRICE_INDEX_KAFKA_BOOTSTRAP_SERVERS="$KAFKA_BOOTSTRAP_SERVERS" \
+    SURPRISING_PRICE_MARK_KAFKA_BOOTSTRAP_SERVERS="$KAFKA_BOOTSTRAP_SERVERS" \
+    SURPRISING_TRADING_ORDER_KAFKA_BOOTSTRAP_SERVERS="$KAFKA_BOOTSTRAP_SERVERS" \
+    SURPRISING_TRADING_MATCHING_KAFKA_BOOTSTRAP_SERVERS="$KAFKA_BOOTSTRAP_SERVERS" \
+    SURPRISING_FUNDING_KAFKA_BOOTSTRAP_SERVERS="$KAFKA_BOOTSTRAP_SERVERS" \
+    SPRING_DATASOURCE_URL="jdbc:postgresql://$POSTGRES_HOST:$POSTGRES_PORT/$POSTGRES_DB" \
+    SPRING_DATASOURCE_USERNAME="$POSTGRES_USER" SPRING_DATASOURCE_PASSWORD="$POSTGRES_PASSWORD" \
+    ACCOUNT_DB_URL="jdbc:postgresql://$POSTGRES_HOST:$POSTGRES_PORT/$POSTGRES_DB" \
+    ACCOUNT_DB_USERNAME="$POSTGRES_USER" ACCOUNT_DB_PASSWORD="$POSTGRES_PASSWORD" \
+    DATABASE_URL="jdbc:postgresql://$POSTGRES_HOST:$POSTGRES_PORT/$POSTGRES_DB" \
+    DATABASE_USER="$POSTGRES_USER" DATABASE_PASSWORD="$POSTGRES_PASSWORD" \
+    REDIS_HOST="$VALKEY_HOST" REDIS_PORT="$VALKEY_PORT" \
+    SURPRISING_PRICE_INDEX_HTTP_PROXY_ENABLED="$PRICE_HTTP_PROXY_ENABLED" \
+    SURPRISING_PRICE_INDEX_HTTP_PROXY_HOST="$PRICE_HTTP_PROXY_HOST" \
+    SURPRISING_PRICE_INDEX_HTTP_PROXY_PORT="$PRICE_HTTP_PROXY_PORT" \
+    PRICE_CONSUMER_CONCURRENCY="$PRICE_CONSUMER_CONCURRENCY" \
+    PRICE_CONSUMER_REQUIRED_SYMBOLS="$PRICE_CONSUMER_REQUIRED_SYMBOLS" \
+    MM_SYMBOL="$MM_SYMBOL" \
+    MM_BASE_QUANTITY_STEPS="$MM_BASE_QUANTITY_STEPS" \
+    MM_ORDER_LEVELS="$MM_ORDER_LEVELS"
+)
+
+start_http_service() {
+  local service="$1" port
+  port="$(service_port "$service")"
+  java_args_for "$service"
+  start_owned_process "$service" "$port" "${COMMON_ENV[@]}" SERVER_PORT="$port" \
+    "$JAVA_HOME/bin/java" "${JVM_ARGS[@]}" -jar "$(jar_path "$service")"
 }
 
-pid_file() {
-  echo "${LOG_DIR}/$1.pid"
+start_background_service() {
+  local service="$1" main_class="$2"
+  java_args_for "$service"
+  start_owned_process "$service" '' "${COMMON_ENV[@]}" \
+    "$JAVA_HOME/bin/java" "${JVM_ARGS[@]}" \
+    -cp "$(jar_path "$service")" "$main_class"
 }
 
-stop_service() {
-  local service="$1"
-  local file
-  file="$(pid_file "${service}")"
-  if [[ ! -f "${file}" ]]; then
-    echo "${service}: no pid file"
-    return
+start_core() {
+  local mode="${1:-up}" node
+  if [[ "$mode" == fresh && -d "$RUN_DIR/aeron" ]]; then
+    mv "$RUN_DIR/aeron" "$RUN_DIR/aeron.previous.$(date +%s)"
   fi
-  local pid
-  pid="$(cat "${file}")"
-  if kill -0 "${pid}" >/dev/null 2>&1; then
-    kill "${pid}"
-    echo "${service}: stopped pid ${pid}"
-  fi
-  rm -f "${file}"
-}
-
-wait_health() {
-  local service="$1"
-  local port="$2"
-  local deadline=$((SECONDS + HEALTH_TIMEOUT_SECONDS))
-  until curl -fsS "http://${LOCAL_HOST}:${port}/actuator/health/readiness" | grep -q '"status":"UP"'; do
-    if ((SECONDS >= deadline)); then
-      echo "${service}: health check timed out on port ${port}; see ${LOG_DIR}/${service}.log" >&2
-      tail -n 80 "${LOG_DIR}/${service}.log" >&2 || true
-      exit 1
-    fi
-    sleep 1
+  mkdir -p "$RUN_DIR/aeron"
+  for node in 0 1 2; do
+    java_args_for "core-node$node"
+    start_owned_process "core-node$node" '' "${COMMON_ENV[@]}" AERON_CORE_THREADING_MODE=DEDICATED \
+      "$JAVA_HOME/bin/java" "${JVM_ARGS[@]}" \
+      -Dsurprising.aeron.product-line="$PRODUCT_LINE" \
+      -Dsurprising.aeron.node-id="$node" \
+      -Dsurprising.aeron.hostnames="$AERON_CLUSTER_HOSTNAMES" \
+      -Dsurprising.aeron.data-dir="$RUN_DIR/aeron" \
+      -Dsurprising.aeron.core.threading-mode=DEDICATED \
+      -jar "$(jar_path core)"
   done
+  local deadline=$((SECONDS + 90))
+  java_args_for core-probe
+  until "${COMMON_ENV[@]}" "$JAVA_HOME/bin/java" "${JVM_ARGS[@]}" \
+    -Dsurprising.aeron.product-line="$PRODUCT_LINE" \
+    -Dsurprising.aeron.hostnames="$AERON_CLUSTER_HOSTNAMES" \
+    -Dsurprising.aeron.egress-hostname="$AERON_EGRESS_HOSTNAME" \
+    -Dsurprising.aeron.probe-mode=query -Dsurprising.aeron.source-id=910001 \
+    -cp "$(jar_path tools)" com.surprising.aeron.tools.ClusterProbeMain >"$LOG_DIR/core-probe.log" 2>&1; do
+    (( SECONDS < deadline )) || fail "Aeron Core readiness timeout log=$LOG_DIR/core-probe.log"
+    sleep 2
+  done
+  mark_ready core-cluster
 }
 
-start_service() {
-  local service="$1"
-  if [[ "${service}" =~ ^(index-price|mark-price|risk|liquidation|insurance|adl)$ ]] && ! supports_margin_services; then
-    echo "${service}: skipped for ${PRODUCT_LINE}"
-    return
-  fi
-  if [[ "${service}" == "funding" ]] && ! supports_funding; then
-    echo "${service}: skipped for ${PRODUCT_LINE}"
-    return
-  fi
-  local slug module launch_artifact port
-  slug="$(product_slug "${PRODUCT_LINE}")"
-  module="$(module_for "${service}")"
-  port=$(( $(base_port_for "${service}") + PORT_OFFSET ))
-  if [[ "${BUILD_SERVICES}" == "true" ]]; then
-    build_service "${service}"
-  fi
-  if [[ "${WAIT_DEPENDENCIES}" == "true" && "${service}" != "instrument" ]] \
-        && service_requested instrument; then
-    wait_health instrument $((9080 + PORT_OFFSET))
-  fi
-  if [[ "${NATIVE_IMAGE}" == "true" ]]; then
-    launch_artifact="$(find_native_binary "${module}")"
-  else
-    launch_artifact="$(find_jar "${module}")"
-  fi
-  local env_values=()
-  local service_java_args=()
-  local env_value
-  if [[ "${NATIVE_IMAGE}" == "true" ]]; then
-    read -r -a service_java_args <<<"${NATIVE_RUNTIME_ARGS}"
-  elif [[ -z "${JAVA_OPTS_EXPLICIT}" ]]; then
-    while IFS= read -r env_value; do
-      service_java_args+=("${env_value}")
-    done < <(test_profile_java_args_for_service "${service}")
-  else
-    read -r -a service_java_args <<<"${JAVA_OPTS}"
-  fi
-  while IFS= read -r env_value; do
-    env_values+=("${env_value}")
-  done < <(common_env "${service}" "${port}" "${slug}"; service_env "${service}" "${slug}")
-  (
-    cd "${ROOT_DIR}"
-    if [[ "${NATIVE_IMAGE}" == "true" ]]; then
-      if ((${#service_java_args[@]} > 0)); then
-        env "${env_values[@]}" "${launch_artifact}" "${service_java_args[@]}"
+start_stack() {
+  local core_action="$1"
+  preflight
+  build_artifacts
+  claim_runtime
+  trap 'cleanup_failed_start' EXIT ERR INT TERM
+  initialize_database
+  start_http_service instrument
+  start_core "$core_action"
+  start_http_service price
+  start_http_service account
+  start_http_service trading
+  start_http_service market-data
+  service_enabled derivatives-lifecycle && start_http_service derivatives-lifecycle
+  service_enabled funding && start_http_service funding
+  start_http_service gateway
+  start_http_service maker
+  trap - EXIT ERR INT TERM
+  printf 'PRODUCT_LINE_RUNTIME=PASS productLine=%s runId=%s wallet=ABSENT\n' "$PRODUCT_LINE" "$RUN_ID"
+}
+
+stop_processes() {
+  [[ -d "$PID_DIR" ]] || return 0
+  local pid_file pid deadline launchctl_bin
+  for pid_file in "$PID_DIR"/*.pid; do
+    [[ -e "$pid_file" ]] || continue
+    pid="$(<"$pid_file")"
+    local label_file="${pid_file%.pid}.label"
+    if [[ -f "$label_file" ]]; then
+      if launchctl_bin="$(launchctl_path)"; then
+        "$launchctl_bin" remove "$(<"$label_file")" >/dev/null 2>&1 || true
       else
-        env "${env_values[@]}" "${launch_artifact}"
+        kill -0 "$pid" 2>/dev/null && kill -TERM "$pid" 2>/dev/null || true
       fi
+      rm -f "$label_file"
     else
-      env "${env_values[@]}" "${JAVA_BIN}" "${service_java_args[@]}" -jar "${launch_artifact}"
-    fi
-  ) >"${LOG_DIR}/${service}.log" 2>&1 &
-  local pid=$!
-  echo "${pid}" >"$(pid_file "${service}")"
-  echo "${service}: started pid ${pid} port ${port} productLine ${PRODUCT_LINE}"
-  if [[ "${WAIT_HEALTH}" == "true" ]]; then
-    wait_health "${service}" "${port}"
-  fi
-}
-
-validate_provider_budget() {
-  local count=0 total_heap=0 service heap_mb max_heap_mb=0
-  for service in ${SERVICES}; do
-    count=$((count + 1))
-    if [[ -n "${JAVA_OPTS_EXPLICIT}" && "${JAVA_OPTS}" =~ -Xmx([1-9][0-9]*)([mMgG]) ]]; then
-      heap_mb="${BASH_REMATCH[1]}"
-      [[ "${BASH_REMATCH[2]}" =~ [gG] ]] && heap_mb=$((heap_mb * 1024))
-    else
-      heap_mb="$(test_profile_service_heap_mb "${service}")"
-    fi
-    total_heap=$((total_heap + heap_mb))
-    if ((heap_mb > max_heap_mb)); then
-      max_heap_mb="${heap_mb}"
+      kill -0 "$pid" 2>/dev/null && kill -TERM "$pid" 2>/dev/null || true
     fi
   done
-  ((count > 0)) || { echo "SERVICES must contain at least one provider" >&2; exit 1; }
-  ((count <= TEST_MAX_PROVIDER_PROCESSES)) || { echo "provider count ${count} exceeds TEST_MAX_PROVIDER_PROCESSES=${TEST_MAX_PROVIDER_PROCESSES}" >&2; exit 1; }
-  local heap_budget_percent=60
-  case "${TEST_PROFILE}" in local-low) heap_budget_percent=45 ;; local-standard) heap_budget_percent=55 ;; esac
-  if ((TEST_MEMORY_MB > 0 && total_heap > TEST_MEMORY_MB * heap_budget_percent / 100)) && [[ "${ALLOW_RESOURCE_OVERRIDE}" != "true" ]]; then
-    echo "provider heap total ${total_heap}MB exceeds ${TEST_PROFILE} budget ${heap_budget_percent}% of ${TEST_MEMORY_MB}MB" >&2
-    exit 1
-  fi
-  if [[ -n "${JAVA_OPTS_EXPLICIT}" && "${max_heap_mb}" -gt "${TEST_JVM_HEAP_MB}" && "${ALLOW_RESOURCE_OVERRIDE}" != "true" ]]; then
-    echo "explicit JAVA_OPTS -Xmx${max_heap_mb}m exceeds TEST_JVM_HEAP_MB=${TEST_JVM_HEAP_MB}; set ALLOW_RESOURCE_OVERRIDE=true only with approval" >&2
-    exit 1
-  fi
+  for pid_file in "$PID_DIR"/*.pid; do
+    [[ -e "$pid_file" ]] || continue
+    pid="$(<"$pid_file")"; deadline=$((SECONDS + 15))
+    while kill -0 "$pid" 2>/dev/null && (( SECONDS < deadline )); do sleep 1; done
+    kill -0 "$pid" 2>/dev/null && kill -KILL "$pid" 2>/dev/null || true
+    rm -f "$pid_file"
+  done
 }
 
-validate_product_line "${PRODUCT_LINE}"
-validate_port_offset
+stop_stack() {
+  if [[ -f "$OWNER_FILE" && "$(<"$OWNER_FILE")" != "$RUN_ID" ]]; then fail "runtime ownership mismatch"; fi
+  stop_processes
+  if [[ -f "$LOCK_OWNER" && "$(<"$LOCK_OWNER")" == "$RUN_ID" ]]; then rm -f "$LOCK_OWNER"; rmdir "$LOCK_DIR" 2>/dev/null || true; fi
+  printf 'PRODUCT_LINE_RUNTIME=STOPPED productLine=%s runId=%s\n' "$PRODUCT_LINE" "$RUN_ID"
+}
 
-# 所有业务模块都依赖 instrument JVM 快照；启动时即使调用方只指定了部分服务，也必须先启动它。
-if [[ "${ACTION}" == "start" ]] && ! service_requested instrument; then
-  instrument_port=$((9080 + PORT_OFFSET))
-  if curl -fsS "http://${LOCAL_HOST}:${instrument_port}/actuator/health/readiness" \
-      | grep -q '"status":"UP"'; then
-    echo "instrument: already ready on port ${instrument_port}; reusing existing provider"
+cleanup_failed_start() {
+  local status=$?
+  trap - ERR INT TERM
+  printf 'START_FAILED productLine=%s cleanup=begin\n' "$PRODUCT_LINE" >&2
+  stop_stack || true
+  exit "$status"
+}
+
+run_test() {
+  stop_stack >/dev/null 2>&1 || true
+  start_stack fresh
+  trap 'stop_stack' EXIT INT TERM
+  local manifest="$RUN_DIR/product-line-test.manifest"
+  java_args_for lifecycle-qa
+  "${COMMON_ENV[@]}" W4_LIFECYCLE_AUTHORITY=CORE W4_DERIVATIVES_LIFECYCLE_URL=http://127.0.0.1:9087 \
+    "$JAVA_HOME/bin/java" "${JVM_ARGS[@]}" \
+    -Dsurprising.aeron.product-line="$PRODUCT_LINE" \
+    -Dsurprising.aeron.hostnames="$AERON_CLUSTER_HOSTNAMES" \
+    -Dsurprising.aeron.egress-hostname="$AERON_EGRESS_HOSTNAME" \
+    -Dsurprising.aeron.lifecycle-manifest="$manifest" \
+    -Dsurprising.aeron.lifecycle-seed="${TEST_SEED:-16001}" \
+    -cp "$(jar_path tools)" com.surprising.aeron.tools.ProductLineLifecycleQaMain
+  grep -q '^TEST_STATUS=PASS$' "$manifest" || fail "test manifest failed path=$manifest"
+  grep -q '^FUNDS_DIFFERENCE=0$' "$manifest" || fail "funds reconciliation failed path=$manifest"
+  printf 'PRODUCT_LINE_TEST=PASS productLine=%s runId=%s scope=FULL_HTTP_AERON\n' "$PRODUCT_LINE" "$RUN_ID"
+}
+
+print_status() {
+  [[ -f "$LOCK_OWNER" && "$(<"$LOCK_OWNER")" == "$RUN_ID" ]] || fail "runtime not active runId=$RUN_ID"
+  local service pid index
+  local required_services=(core-node0 core-node1 core-node2) verified_pids=()
+  for service in "${SERVICES[@]}"; do
+    service_enabled "$service" && required_services+=("$service")
+  done
+  local pid_files=("$PID_DIR"/*.pid)
+  [[ -e "${pid_files[0]}" && "${#pid_files[@]}" -eq "${#required_services[@]}" ]] || \
+    fail "process ownership set mismatch expected=${#required_services[@]}"
+  for service in "${required_services[@]}"; do
+    verify_owned_process "$service" >/dev/null
+  done
+  sleep 1
+  for service in "${required_services[@]}"; do
+    pid="$(verify_owned_process "$service")" || return $?
+    verified_pids+=("$pid")
+  done
+  for index in "${!required_services[@]}"; do
+    printf 'PROCESS=RUNNING service=%s pid=%s\n' \
+      "${required_services[$index]}" "${verified_pids[$index]}"
+  done
+}
+
+verify_owned_process() {
+  local service="$1" pid_file="$PID_DIR/$1.pid" label_file="$PID_DIR/$1.label"
+  local pid label expected_label launchctl_bin supervised_pid command_line
+  [[ -f "$pid_file" ]] || fail "process ownership missing service=$service"
+  pid="$(<"$pid_file")"
+  [[ "$pid" =~ ^[0-9]+$ ]] || fail "invalid process ownership service=$service"
+  kill -0 "$pid" 2>/dev/null || fail "process not running service=$service"
+  if [[ -f "$label_file" ]]; then
+    launchctl_bin="$(launchctl_path)" || fail "launchd ownership unavailable service=$service"
+    label="$(<"$label_file")"
+    expected_label="com.surprising.product-line.${RUN_ID//[^a-zA-Z0-9.-]/-}.$service"
+    [[ "$label" == "$expected_label" ]] || fail "launchd label mismatch service=$service"
+    supervised_pid="$("$launchctl_bin" print "gui/$(id -u)/$expected_label" 2>/dev/null | \
+      awk '/pid =/{print $3; exit}')"
+    [[ "$supervised_pid" == "$pid" ]] || fail "launchd pid mismatch service=$service"
+  elif launchctl_path >/dev/null; then
+    fail "launchd label missing service=$service"
   else
-    SERVICES="instrument ${SERVICES}"
+    command_line="$(ps -p "$pid" -o command= 2>/dev/null)" || \
+      fail "process identity unavailable service=$service"
+    [[ " $command_line " == *" -Dsurprising.launcher.identity=$RUN_ID/$service "* ]] || \
+      fail "process identity mismatch service=$service"
   fi
-fi
-validate_provider_budget
+  printf '%s\n' "$pid"
+}
 
-PRODUCT_SLUG="$(product_slug "${PRODUCT_LINE}")"
-if [[ -z "${LOG_DIR}" ]]; then
-  LOG_DIR="${ROOT_DIR}/.local-logs/product-lines/${PRODUCT_SLUG}"
-fi
-mkdir -p "${LOG_DIR}"
+print_dry_run() {
+  printf 'DRY_RUN=PASS\nPRODUCT_LINE=%s\nRUN_ID=%s\nCORE_MODE=HOST_THREE_NODE_DEDICATED\n' "$PRODUCT_LINE" "$RUN_ID"
+  printf 'JVM_COMPATIBILITY=PASS implementation=%s featureVersion=%s collector=%s telemetry=%s jfr=%s\n' \
+    "$JVM_IMPLEMENTATION" "$JVM_FEATURE_VERSION" "$JVM_GC" "$JVM_TELEMETRY_MODE" "$JFR_ENABLED"
+  local service
+  printf 'START_ORDER=instrument,host-core-node0,host-core-node1,host-core-node2,price,account,trading,market-data'
+  service_enabled derivatives-lifecycle && printf ',derivatives-lifecycle'
+  service_enabled funding && printf ',funding'
+  printf ',gateway,maker\nWALLET=ABSENT\nPOSTGRES=%s:%s/%s\nKAFKA=%s\nVALKEY=%s:%s\n' \
+    "$POSTGRES_HOST" "$POSTGRES_PORT" "$POSTGRES_DB" "$KAFKA_BOOTSTRAP_SERVERS" "$VALKEY_HOST" "$VALKEY_PORT"
+}
 
-case "${ACTION}" in
-  start)
-    for service in ${SERVICES}; do
-      start_service "${service}"
-    done
-    ;;
-  stop)
-    for service in ${SERVICES}; do
-      stop_service "${service}"
-    done
-    ;;
-  *)
-    echo "Unsupported ACTION: ${ACTION}; use start or stop" >&2
-    exit 1
-    ;;
+export JAVA_HOME PRODUCT_LINE RUN_ID AERON_CLUSTER_HOSTNAMES AERON_EGRESS_HOSTNAME
+export POSTGRES_HOST POSTGRES_PORT POSTGRES_DB POSTGRES_USER POSTGRES_PASSWORD KAFKA_BOOTSTRAP_SERVERS
+export VALKEY_HOST VALKEY_PORT
+case "$ACTION" in
+  up|fresh|test|dry-run) detect_jvm_campaign_support ;;
+esac
+case "$ACTION" in
+  up) start_stack up ;;
+  fresh) stop_stack >/dev/null 2>&1 || true; start_stack fresh ;;
+  down) stop_stack ;;
+  status) print_status ;;
+  test) run_test ;;
+  dry-run) print_dry_run ;;
 esac
